<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.won1203.lura.HomeFragment"
        android:label="@string/home_fragment_label"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_homeFragment_to_alarmSetupFragment"
            app:destination="@id/alarmSetupFragment" />

        <action
            android:id="@+id/action_homeFragment_to_appInfoFragment"
            app:destination="@id/appInfoFragment" />
    </fragment>

    <fragment
        android:id="@+id/alarmSetupFragment"
        android:name="com.won1203.lura.AlarmSetupFragment"
        android:label="@string/alarm_setup_fragment_label"
        tools:layout="@layout/fragment_alarm_setup">

        <action
            android:id="@+id/action_alarmSetupFragment_to_alarmHistoryFragment"
            app:destination="@id/alarmHistoryFragment" />
    </fragment>

    <fragment
        android:id="@+id/alarmHistoryFragment"
        android:name="com.won1203.lura.AlarmHistoryFragment"
        android:label="@string/alarm_history_fragment_label"
        tools:layout="@layout/fragment_alarm_history" />

    <fragment
        android:id="@+id/reportFragment"
        android:name="com.won1203.lura.ReportFragment"
        android:label="@string/report_fragment_label"
        tools:layout="@layout/fragment_report" />

    <fragment
        android:id="@+id/playerFragment"
        android:name="com.won1203.lura.PlayerFragment"
        android:label="@string/player_fragment_label"
        tools:layout="@layout/fragment_player" />

    <fragment
        android:id="@+id/appInfoFragment"
        android:name="com.won1203.lura.AppInfoFragment"
        android:label="@string/app_info_title"
        tools:layout="@layout/fragment_app_info">

        <action
            android:id="@+id/action_appInfoFragment_to_legalDocumentFragment"
            app:destination="@id/legalDocumentFragment" />
    </fragment>

    <fragment
        android:id="@+id/legalDocumentFragment"
        android:name="com.won1203.lura.LegalDocumentFragment"
        android:label="@string/app_info_title"
        tools:layout="@layout/fragment_legal_document" />
</navigation>
